azs - update gitignore to ignore compiled apps and the build folder

--- a/.gitignore
+++ b/.gitignore
@@ -48,6 +48,10 @@ uqFEM.pro.user
 
 # build folder
 applications/out/build/*
+applications/build/*
+
+# compiled applications
+applications/applications/*
 
 Makefile
 *.pro.user
